<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IntroActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                app:srcCompat="@drawable/intro_logo" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:textSize="20sp"
                android:text="@string/Intro"
                android:textAlignment="center"
                android:paddingTop="20dp"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Intro2"
                android:textAlignment="center"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:textSize="20sp"
                android:textColor="@color/purple"
                />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/introDes1"
                android:textAlignment="center"
                android:paddingTop="20dp"
                android:textColor="@color/grey"
                />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/introDes2"
                android:textAlignment="center"
                android:paddingTop="5dp"
                android:textColor="@color/grey"
                />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/introDes3"
                android:textAlignment="center"
                android:paddingTop="5dp"
                android:textColor="@color/grey"/>

            <Button
                android:id="@+id/startBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/MainNav"
                android:layout_marginTop="15dp"
                android:background="@drawable/purple_button"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"

                />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signInNav"
                android:paddingTop="10dp"
                android:textAlignment="center"

                />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>